--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <ul>
             <li><a href="#usuarios">Usuarios</a></li>
             <li><a href="#administradores">Administradores</a></li>
-            <li><a href="#administradores">Administradores</a></li>
+            <li><a href="#comentarios">Administradores</a></li>
 
         </ul>
     </nav>
