--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Página de Inicio - Gestión de Pagos de Agua</title>
+<title>SystemWater</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link rel="stylesheet" href="styles.css">
 <style>
@@ -36,12 +36,12 @@
 <body>
 
 <header>
-    <h1>Gestión de Pagos de Agua - Tierra Blanca</h1>
+    <h1>SystemWater</h1>
     <nav>
         <ul>
             <li><a href="#usuarios">Usuarios</a></li>
             <li><a href="#administradores">Administradores</a></li>
-            <li><a href="#comentarios">Administradores</a></li>
+            <li><a href="#comentarios">Comentarios</a></li>
 
         </ul>
     </nav>
